JDK17 tweaks