@@ -94,7 +94,7 @@
 		<dependency>
 			<groupId>com.vladsch.flexmark</groupId>
 			<artifactId>flexmark-all</artifactId>
-			<version>0.34.48</version>
+			<version>0.62.2</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -121,7 +121,7 @@
 			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.11.3</version>
+			<version>1.14.2</version>
 		</dependency>
 
 		<!-- Provided by Jetty -->
@@ -173,10 +173,6 @@
 			</resource>
 			<resource>
 				<filtering>false</filtering>
-				<directory>src/test/resources</directory>
-			</resource>
-			<resource>
-				<filtering>false</filtering>
 				<directory>src/main/webapp</directory>
 				<includes>
 					<include>**</include>
@@ -206,6 +202,13 @@
 				<excludes>
 					<exclude>**/*.java</exclude>
 				</excludes>
+			</testResource>
+			<testResource>
+				<filtering>false</filtering>
+				<directory>src/test/resources</directory>
+				<includes>
+					<include>**</include>
+				</includes>
 			</testResource>
 		</testResources>
 		<pluginManagement>
@@ -396,6 +399,16 @@
 						<version>1.0-beta-7</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+					<useSystemClassLoader>false</useSystemClassLoader>
+					<reuseForks>false</reuseForks>
+					<useModulePath>false</useModulePath>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
